# burrow

./: CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
.github/workflows/: ci.yml  release.yml
crates/burrow-cli/: Cargo.toml  README.md
crates/burrow-cli/src/: main.rs
crates/burrow-client/: Cargo.toml  README.md
crates/burrow-client/src/: lib.rs
crates/burrow-core/: Cargo.toml  README.md
crates/burrow-core/src/: frame.rs  lib.rs
crates/burrow-server/: Cargo.toml
crates/burrow-server/src/: main.rs  server.rs  tunnel.rs
