[package]
name = "burrow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "CLI tool to expose a local port through a burrow tunnel"

[[bin]]
name = "burrow"
path = "src/main.rs"

[dependencies]
burrow-client = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
