[package]
name = "burrow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core protocol types for the burrow tunnel system"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
